# http-bot

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
input/: example.json
src/: http_client.cpp  http_client.hpp  json_loader.cpp  json_loader.hpp  main.cpp
